# GentSampler

./: .gitignore  BACKLOG.md  CLAUDE.md  CLEAN_MACHINE_CHECKLIST.md  CMakeLists.txt  DATA_INTEGRITY_SPEC.md  E1_HEADER_MOCKUP.html  GENTSAMPLER_AUDIT.md  GPU_HANDOFF.md  INSTALLER_SPEC.md  INSTALLER_TEST_CHECKLIST.md  KIT_SPEC.md  MACOS_PKG_SPEC.md  MACOS_PORT_SPEC.md  MACOS_TEST_CHECKLIST.md  PACKAGING_SPEC.md  PHASE3_SPEC.md  PHASE_E_POLISH_PASS.md  PREPACKAGE_AUDIT.md  PREPACKAGE_AUDIT_2.md  PREPACK_UX_SPEC.md  README.md  REDESIGN_C6_POLISH.md  REDESIGN_TASK_D.md  ROUTING.md  SECTIONS_SPEC.md  SLICE_FEEL_TASK.md  STAGE1_README.md  TEARDOWN_FIX_SPEC.md  TEST_TARGET_TASK.md  WAVE1_SPEC.md  WAVE2_SPEC.md  WAVE3_SPEC.md  WAVE4_SPEC.md  build.bat
.claude/: agent.config  settings.json
.claude/agents/: implementer.md  planner.md  reviewer.md  spec-drafter.md
.claude/hooks/: build_test.sh  gate.sh  pluginval_gate.sh  verdict_lint.py
.github/workflows/: macos-build.yml
Source/: Analysis.h  EngineMath.h  ModelDownloader.cpp  ModelDownloader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StemSeparator.cpp  StemSeparator.h  Theme.h  Transcriber.cpp  Transcriber.h
THIRD_PARTY_LICENSES/: README.md
THIRD_PARTY_LICENSES/demucs/: LICENSE
THIRD_PARTY_LICENSES/juce/: NOTICE
THIRD_PARTY_LICENSES/signalsmith-stretch/: LICENSE
docs/: STEM_VIEW_MODEL.md
installer/: GentSampler.iss  make_installer.bat
tests/: ClassifierTests.cpp  FeatureAggTests.cpp  FormatTests.cpp  KitTests.cpp  NoveltyTests.cpp  PathGuardTests.cpp  SectionTests.cpp  SliceWindowTests.cpp  SnapTests.cpp  StemMaskTests.cpp  TestMain.cpp  TriggerTests.cpp
